--- a/static/css/less/breakpoints.less
+++ b/static/css/less/breakpoints.less
@@ -1,3 +1,4 @@
+@width-breakpoint-mobile-m: 425px;
 @width-breakpoint-mobile: 450px;
 @width-breakpoint-tablet: 768px; // 48em
 @width-breakpoint-desktop: 960px; // 60em
